get overflow-y working correctly

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -41,7 +41,11 @@ html {
 /*
     No scrolling root element
  */
-html, body {margin: 0; height: 100%; overflow: hidden}
+html {
+    margin: 0;
+    height: 100%;
+    overflow: hidden
+}
 
 body {
     margin: 0;
